--- a/FE-Traveloka/src/components/Poper/Menu/Menu.module.scss
+++ b/FE-Traveloka/src/components/Poper/Menu/Menu.module.scss
@@ -26,9 +26,13 @@
     font-weight: 550;
     width: 100%;
     justify-content: flex-start;
-
+    border-radius: 0px;
     &:hover {
         background-color: rgba(22, 24, 35, 0.03);
         cursor: pointer;
     }
+}
+
+.menu-item:not(:last-child){
+    border-bottom: 1px solid var(--primary);
 }
