--- a/FE-Traveloka/src/components/Poper/Poper.module.scss
+++ b/FE-Traveloka/src/components/Poper/Poper.module.scss
@@ -6,4 +6,5 @@
     box-shadow: 0px 2px 5px rgba(3, 18, 26, 0.15);
     border-radius: 5px;
     padding: 8px 8px;
+    border: 1px solid rgba(205, 208, 209, 1.00);;
 }
