--- a/FE-Traveloka/src/pages/Home/Home.module.scss
+++ b/FE-Traveloka/src/pages/Home/Home.module.scss
@@ -174,6 +174,8 @@
 }
 
 .amount-cus {
+    margin-left: 32px;
+    width: fit-content;
     margin-top: 8px;
     border-bottom: 1px solid rgba(205, 208, 209, 1);
 
